<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".already_member"
    android:background="@color/main_backgroud_app_color">

    <EditText
        android:id="@+id/et_email_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/emil"
        android:inputType="textEmailAddress"
        android:layout_marginTop="60dp">

    </EditText>
    <EditText
        android:id="@+id/et_parola_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email_log"
        android:hint="@string/parola"
        android:inputType="textPassword"
        android:layout_marginTop="60dp">

    </EditText>

    <ProgressBar
        android:id="@+id/simpleProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_intraincont"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_intraincont"
        app:layout_constraintTop_toBottomOf="@id/et_parola_log"
        android:text="@string/login"
        style="@style/Just_simple_style"
        android:background="@color/btncolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>